--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-amplify/backend": "^0.12.1",
     "@vercel/node": "^3.0.17",
+    "aws-amplify": "^6.0.20",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
