--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "@vercel/node": "^3.0.17",
+    "aws": "^0.0.3-2",
     "aws-amplify": "^6.0.20",
+    "aws-sdk": "^2.1576.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
@@ -27,6 +29,7 @@
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "sdk": "^0.5.0",
     "uuid": "^9.0.1"
   },
   "description": "",
