--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon -r dotenv/config index.js",
-    "build": "node index.js",
+    "start": "nodemon -r dotenv/config src/index.js",
+    "build": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "chmod +x bin/postbuild.sh && ./bin/postbuild.sh"
   },
