--- a/packages/backend/deploy-manifest.json
+++ b/packages/backend/deploy-manifest.json
@@ -44,7 +44,7 @@
       {
         "name": "default",
         "runtime": "nodejs18.x",
-        "entrypoint": "./src/index.js"
+        "entrypoint": "index.js"
       }
     ]
   }
