--- a/packages/backend/deploy-manifest.json
+++ b/packages/backend/deploy-manifest.json
@@ -33,7 +33,7 @@
         }
       },
       {
-        "path": "/*",
+        "path": "/src/*",
         "target": {
           "kind": "Compute",
           "src": "default"
