--- a/packages/backend/deploy-manifest.json
+++ b/packages/backend/deploy-manifest.json
@@ -33,7 +33,7 @@
         }
       },
       {
-        "path": "/src/*",
+        "path": "/*",
         "target": {
           "kind": "Compute",
           "src": "default"
@@ -44,7 +44,7 @@
       {
         "name": "default",
         "runtime": "nodejs18.x",
-        "entrypoint": "index.js"
+        "entrypoint": "/src/index.js"
       }
     ]
   }
